--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ publish = false
 clap = "^2.29"
 failure = "^0.1.1"
 failure_derive = "^0.1.1"
-
+fixedbitset = "^0.1.8"
+ndarray = "^0.11.1"
+itertools = "^0.7.6"
