--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ itertools = "^0.7.6"
 num = "^0.1.42"
 num-traits = "^0.1.42"
 lazy_static = "^1"
+arrayvec = "0.4.7"
 log = "0.4.5"
 env_logger = "0.5.13"
